; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_dac_output_voltage.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_dac_output_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DAC_CHANNEL_1 = common dso_local global i64 0, align 8
@DAC_CHANNEL_MAX = common dso_local global i64 0, align 8
@DAC_ERR_STR_CHANNEL_ERROR = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@rtc_spinlock = common dso_local global i32 0, align 4
@SENS_SAR_DAC_CTRL1_REG = common dso_local global i32 0, align 4
@SENS_SW_TONE_EN = common dso_local global i32 0, align 4
@SENS_SAR_DAC_CTRL2_REG = common dso_local global i32 0, align 4
@SENS_DAC_CW_EN1_M = common dso_local global i32 0, align 4
@DAC_CHANNEL_2 = common dso_local global i64 0, align 8
@SENS_DAC_CW_EN2_M = common dso_local global i32 0, align 4
@RTC_IO_PAD_DAC1_REG = common dso_local global i32 0, align 4
@RTC_IO_PDAC1_DAC = common dso_local global i32 0, align 4
@RTC_IO_PDAC1_DAC_S = common dso_local global i32 0, align 4
@RTC_IO_PAD_DAC2_REG = common dso_local global i32 0, align 4
@RTC_IO_PDAC2_DAC = common dso_local global i32 0, align 4
@RTC_IO_PDAC2_DAC_S = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dac_output_voltage(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @DAC_CHANNEL_1, align 8
  %7 = icmp sge i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @DAC_CHANNEL_MAX, align 8
  %11 = icmp slt i64 %9, %10
  br label %12

12:                                               ; preds = %8, %2
  %13 = phi i1 [ false, %2 ], [ %11, %8 ]
  %14 = zext i1 %13 to i32
  %15 = load i32, i32* @DAC_ERR_STR_CHANNEL_ERROR, align 4
  %16 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %17 = call i32 @RTC_MODULE_CHECK(i32 %14, i32 %15, i32 %16)
  %18 = call i32 @portENTER_CRITICAL(i32* @rtc_spinlock)
  %19 = load i32, i32* @SENS_SAR_DAC_CTRL1_REG, align 4
  %20 = load i32, i32* @SENS_SW_TONE_EN, align 4
  %21 = call i32 @CLEAR_PERI_REG_MASK(i32 %19, i32 %20)
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* @DAC_CHANNEL_1, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %12
  %26 = load i32, i32* @SENS_SAR_DAC_CTRL2_REG, align 4
  %27 = load i32, i32* @SENS_DAC_CW_EN1_M, align 4
  %28 = call i32 @CLEAR_PERI_REG_MASK(i32 %26, i32 %27)
  br label %38

29:                                               ; preds = %12
  %30 = load i64, i64* %3, align 8
  %31 = load i64, i64* @DAC_CHANNEL_2, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %29
  %34 = load i32, i32* @SENS_SAR_DAC_CTRL2_REG, align 4
  %35 = load i32, i32* @SENS_DAC_CW_EN2_M, align 4
  %36 = call i32 @CLEAR_PERI_REG_MASK(i32 %34, i32 %35)
  br label %37

37:                                               ; preds = %33, %29
  br label %38

38:                                               ; preds = %37, %25
  %39 = load i64, i64* %3, align 8
  %40 = load i64, i64* @DAC_CHANNEL_1, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %48

42:                                               ; preds = %38
  %43 = load i32, i32* @RTC_IO_PAD_DAC1_REG, align 4
  %44 = load i32, i32* @RTC_IO_PDAC1_DAC, align 4
  %45 = load i32, i32* %4, align 4
  %46 = load i32, i32* @RTC_IO_PDAC1_DAC_S, align 4
  %47 = call i32 @SET_PERI_REG_BITS(i32 %43, i32 %44, i32 %45, i32 %46)
  br label %59

48:                                               ; preds = %38
  %49 = load i64, i64* %3, align 8
  %50 = load i64, i64* @DAC_CHANNEL_2, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %48
  %53 = load i32, i32* @RTC_IO_PAD_DAC2_REG, align 4
  %54 = load i32, i32* @RTC_IO_PDAC2_DAC, align 4
  %55 = load i32, i32* %4, align 4
  %56 = load i32, i32* @RTC_IO_PDAC2_DAC_S, align 4
  %57 = call i32 @SET_PERI_REG_BITS(i32 %53, i32 %54, i32 %55, i32 %56)
  br label %58

58:                                               ; preds = %52, %48
  br label %59

59:                                               ; preds = %58, %42
  %60 = call i32 @portEXIT_CRITICAL(i32* @rtc_spinlock)
  %61 = load i32, i32* @ESP_OK, align 4
  ret i32 %61
}

declare dso_local i32 @RTC_MODULE_CHECK(i32, i32, i32) #1

declare dso_local i32 @portENTER_CRITICAL(i32*) #1

declare dso_local i32 @CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @SET_PERI_REG_BITS(i32, i32, i32, i32) #1

declare dso_local i32 @portEXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
